Arrumei erros e reorganizei as pastas

--- a/fichas_medicas/fichas_medicas.html
+++ b/fichas_medicas/fichas_medicas.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/afterpages/fichas_medicas.css">
-  <script src="./fichas_medicas.js"></script>
+  <link rel="stylesheet" href="/fichas_medicas/fichas_medicas.css">
+  <script src="/fichas_medicas/fichas_medicas.js"></script>
   <title>Fichas Médicas</title>
 </head>
 
 <body>
-  <a href="/inicio.html"><strong>Início</strong></a>
+  <a href="/pagina _inicial/inicio.html"><strong>Início</strong></a>
   <h1>Fichas Médicas</h1>
   <div class="grid">
     <div class="pacientes_box" onclick="clicar()">A</div>
