--- a/questionario/questionario.html
+++ b/questionario/questionario.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/questionario/questionario.css">
+    <script src="/questionario/questionario.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div>
-        <div>aaaaaaaaaaaaa</div>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
+        <div id="display">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+        <div id="questionbox">
+        <div class="question"><button onclick="inf1()">Sim</button></div>
+        <div class="question"><button onclick="inf2()">Não</button></div>
+        </div>
     </div>
 </body>
 </html>
