--- a/fichas_medicas/fichas_medicas.html
+++ b/fichas_medicas/fichas_medicas.html
@@ -15,8 +15,8 @@
   <h1>Fichas Médicas</h1>
   <div class="grid">
     <div id="divBusca">
-      <input type="text" id="txtBusca" placeholder="Buscar..."/>
-      <button id="btnBusca">Buscar</button>
+      <input type="search" id="txtBusca" placeholder="Buscar..."/>
+      <button id="btnBusca" onclick="searchData()">Buscar</button>
     </div>
   </div>
   <div id="display">
